@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-13T02:05:52Z",
+  "timestamp" : "2022-10-13T08:29:22Z",
   "count_outdated" : 2491,
   "uniques_outdated" : 638,
   "count" : 2520,
-  "uniques" : 655,
+  "uniques" : 656,
   "clones" : [
     {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 2, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -65,6 +65,13 @@
       "timestamp": "2022-10-12T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
