@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-09-29T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -45,6 +45,11 @@
     {
       "timestamp": "2022-10-12T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-13T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
